Linked the Technical Docs and Setup Guide images to the appropriate pages (#164)
Made JS invocation tag part of the build process (#158)
Fixed warnings generated by the Closure Compiler, thanks @steve-gh! (#170) 
Added untracked files which should be ignored to .gitignore (#173)
Removed ads/sync.html (#182)
Updated ads/async.html (#183)
Added pageUnloadTimer option to argmap (#171)
Added custom context vendor configuration option (#180)

Version 1.0.1 (2014-04-09)
--------------------------
Fixed lodash.js to work in the presence of AMD modules (#165)
Added missing variable declarations (#166)

Version 1.0.0 (2014-03-27)
--------------------------
Added extra meta-data to package.json (#83)
Moved part of banner.js into Gruntfile with grunt-concat's banner option so its values are based on package.json (#82)
Started using Browserify for modules (#74)
Replaced some/all of lib/.js with modules (#7)
Added user fingerprinting on/off switch and configurable hash seed (#7)
Deprecated trackImpression (#66)
Removed attachUserId as fully deprecated now (#64)
Removed setSiteId as fully deprecated now (#63)
Removed getVisitor-Id, -Info as fully deprecated now (#62)
Removed trackEvent as fully deprecated now (#61)
Tightened public API for SnowPlow (#29)
Renamed SnowPlow everywhere to Snowplow (#69)
Prepended window. or SnowPlow.windowAlias. onto _snaq everywhere (#39)
Removed legacy Piwik plugin framework (#56)
Moved hasSessionStorage and hasLocalStorage into detectors.js (#91)
Wrote tests for AsyncQueueProxy (#100)
Added Travis CI to the project (#103)
Added a built with Grunt button to the README (#102)
Added codeclimate button to README (#137)
Added named Grunt tasks (#86)
Added Intern unit tests for payload.js (#5)
Replaced all functions in identifiers.js which are directly available from lodash (#85)
Moved functions from identifers.js into payload.js and wrote Intern tests for them (#108)
Added getting started info for developers to README, thanks @pkallos! (#129)
