@@ -30,7 +30,8 @@
           encodeBase64: false,
           appId: 'CFe23a',
           platform: 'mob',
-          cookieName: '_cf_3489563' // Cookie names should be unique to prevent mix-ups
+          cookieName: '_cf_3489563', // Cookie names should be unique to prevent mix-ups
+          contextVendor: 'com.example_company'
         });
 
         // This second tracker namespace could have a different collector as its endpoint
@@ -39,7 +40,8 @@
           appId: '8D4920',
           platform: 'mob',
           userFingerprintSeed: 857463967, // Sets a custom seed for the "uri" tracker to generate the user fingerprint; the "cf" tracker will still use the default fingerprint
-          cookieName: '_uri_73457324'
+          cookieName: '_uri_73457324',
+          contextVendor: 'com.example_company'
         });
 
         window.new_name_here('setUserId', 'alex 123'); // Business-defined user ID
@@ -92,7 +94,8 @@
                     price: 49.95,
                     sizes: ['xs', 's', 'l', 'xl', 'xxl'],
                     available_since$dt: new Date(2013,3,7)
-                }
+                },
+                'com.example_company'
             );
         }
 
